fix long name layout break issue

--- a/css/style.css
+++ b/css/style.css
@@ -191,7 +191,7 @@ body {
 @media only screen and (min-width: 950px) {
   .profile__right-content {
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 2fr 1fr;
   }
 }
 
